--- a/uikit/src/main/res/drawable/equal_svgrepo_com.xml
+++ b/uikit/src/main/res/drawable/equal_svgrepo_com.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="32"
-    android:viewportWidth="32" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000000" android:pathData="M24,9.813v2.25h-15.813v-2.25h15.813zM24,16.656v2.281h-15.813v-2.281h15.813z"/>
+<vector android:height="24dp"
+  android:viewportHeight="32"
+  android:viewportWidth="32"
+  android:width="24dp"
+  xmlns:android="http://schemas.android.com/apk/res/android">
+  <path
+    android:fillColor="#000000"
+    android:pathData="M24,10.813v2.25h-15.813v-2.25h15.813zM24,17.656v2.281h-15.813v-2.281h15.813z" />
 </vector>
